# AFR-Bluedroid

./: CMakeLists.txt  README.MD  main.c
src/: CMakeLists.txt  bt-classic.c  bt-classic.h  vfs.c  vfs.h
src/bt-serial/: BTAddress.h  BTScan.h  BTScanResultsSet.cpp  BluetoothSerial.c  BluetoothSerial.h
